--- a/package.json
+++ b/package.json
@@ -10,9 +10,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "@types/marked": "^1.2.1",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
+    "marked": "^1.2.5",
+    "material-design-icons-iconfont": "^5.0.1",
+    "roboto-fontface": "*",
     "vue": "^2.6.11",
+    "vue-page-transition": "^0.2.2",
     "vue-router": "^3.2.0",
+    "vue2-transitions": "^0.3.0",
+    "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -40,6 +49,7 @@
     "prettier": "^1.19.1",
     "ts-node": "^8.10.2",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-vuetify": "~2.0.8",
     "vue-template-compiler": "^2.6.11",
     "wdio-chromedriver-service": "^6.0.3"
   },
