--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue-router": "^3.2.0",
     "vue2-transitions": "^0.3.0",
     "vuetify": "^2.2.11",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-module-decorators": "^1.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
