--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "@types/dompurify": "^2.0.4",
+    "@types/jwt-decode": "^3.1.0",
     "@types/marked": "^1.2.1",
     "core-js": "^3.6.5",
     "dompurify": "^2.2.3",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "marked": "^1.2.5",
     "material-design-icons-iconfont": "^5.0.1",
