--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/marked": "^1.2.1",
     "core-js": "^3.6.5",
     "dompurify": "^2.2.3",
+    "firebase": "^8.2.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "marked": "^1.2.5",
