Finish setup of codes

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "@koumoul/vjsf": "^1.17.1",
     "@types/dompurify": "^2.0.4",
     "@types/jwt-decode": "^3.1.0",
     "@types/marked": "^1.2.1",
