--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "vue2-transitions": "^0.3.0",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0",
-    "vuex-module-decorators": "^1.0.1"
+    "vuex-module-decorators": "^1.0.1",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
