--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
-    "heroku-postbuild": "yarn build"
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "heroku-postbuild": "yarn build",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "@koumoul/vjsf": "^1.17.1",
@@ -35,6 +40,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/mocha": "^8.0.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -50,14 +56,19 @@
     "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "chromedriver": "86",
+    "electron": "^9.0.0",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
+    "spectron": "11.0.0",
     "ts-node": "^8.10.2",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-electron-builder": "~2.0.0-rc.5",
     "vue-cli-plugin-vuetify": "~2.0.8",
     "vue-template-compiler": "^2.6.11",
     "wdio-chromedriver-service": "^6.0.3"
